Implement all functionality

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
 
+    <script src="env/config.js"></script>
     <script src="data/data.js"></script>
 
     <script src="models/SongModel.js"></script>
@@ -16,11 +17,14 @@
 
     <script src="views/PlayerView.js"></script>
     <script src="views/LibraryView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
 
     <script>
       $(function() {
+
         // set up model objects
         var library = new Songs(songData);
         var app = new AppModel({library: library});
@@ -31,6 +35,6 @@
         // put the view onto the screen
         $('body').append(appView.render());
       });
-    </script>
+  </script>
   </body>
 </html>
